force-app/src/objects/LearnWorlds_AuthTokenSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expires_In__c</fullName>
        <label>Expires In</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Token_Type__c</fullName>
        <label>Token Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LearnWorlds AuthTokenSetting</label>
</CustomObject>